src/objects/Special_Event__c.object
<CustomObject>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Pulls in the related product&apos;s product family</description>
        <formula>TEXT(Product__r.Family)</formula>
        <inlineHelpText>Pulls in the related product&apos;s product family</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <description>Pulls in the related product id</description>
        <formula>Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related product id</inlineHelpText>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related product</description>
        <inlineHelpText>Related product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BSC Events</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisional_Bookings__c</fullName>
        <description>Calculates the number of provisional bookings by counting the event bookings where the status is provisional</description>
        <inlineHelpText>Calculates the number of provisional bookings by counting the event bookings where the status is provisional</inlineHelpText>
        <label>Provisional Bookings</label>
        <summaryFilterItems>
            <field>Special_Event_Booking__c.Status__c</field>
            <operation>equals</operation>
            <value>Provisional,, To Be Transferred</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Booking__c.Special_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Required_Revenue__c</fullName>
        <description>Additional Revenue required for In-Company events to reach target margin</description>
        <formula>(Target_Contribution_Product__c - Current_Margin__c )* Grand_Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Additional Revenue required for In-Company events to reach target margin</inlineHelpText>
        <label>Required Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Travel_Date__c</fullName>
        <description>Date delivery staff return from event</description>
        <inlineHelpText>Date delivery staff return from event</inlineHelpText>
        <label>Return Travel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Code__c</fullName>
        <description>This is the Revenue Code for the BSC Event</description>
        <inlineHelpText>This is the Revenue Code for the BSC Event</inlineHelpText>
        <label>Revenue Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Ass_Itinerary_Completed__c</fullName>
        <description>Date risk Assessment and Itinerary was completed</description>
        <inlineHelpText>Date risk Assessment and Itinerary was completed</inlineHelpText>
        <label>Risk Ass &amp; Itinerary Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Ass_Received_By_Traveler__c</fullName>
        <description>Date risk assessment was received by traveler</description>
        <inlineHelpText>Date risk assessment was received by traveler</inlineHelpText>
        <label>Risk Ass Received By Traveler</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Sent_to_Technical_Srv__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes the Risk Assessment has been sent to Technical Serrvices</description>
        <inlineHelpText>Tick this box when the Risk Assessment has been sent to the Technical Services team</inlineHelpText>
        <label>Risk Assessment Sent to Technical Srv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Commission_rate__c</fullName>
        <defaultValue>0.12</defaultValue>
        <description>Average % of sales commission</description>
        <inlineHelpText>Average % of sales commission</inlineHelpText>
        <label>Sales Commission rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <description>Any notes written by sales at the point of requesting an event (ie specific trainer to be requested etc)</description>
        <inlineHelpText>Any notes written by sales at the point of requesting an event (ie specific trainer to be requested etc)</inlineHelpText>
        <label>Sales Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Provisional_Expiry_Date__c</fullName>
        <description>Deadline for sales to agree dates</description>
        <inlineHelpText>Deadline for sales to agree dates</inlineHelpText>
        <label>Sales Provisional Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Provisional_Extension_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Extension approved for sales to agree dates?</description>
        <inlineHelpText>Extension approved for sales to agree dates?</inlineHelpText>
        <label>Sales Provisional Extension Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Shows the stage of the event, which is a dependant pick list of the status field</description>
        <inlineHelpText>Shows the stage of the event, which is a dependant pick list of the status field</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date when Special Event starts.</description>
        <inlineHelpText>Date when Special Event starts.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows the status of the event.</description>
        <inlineHelpText>Shows the status of the event.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timed Out (Client Provisional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timed Out (Sales Provisional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred - BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred - Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Contribution_Event__c</fullName>
        <description>The Target Contribution for the event (populated automatically from the product if left blank)</description>
        <inlineHelpText>The Target Contribution for the event (populated automatically from the product if left blank)</inlineHelpText>
        <label>Target Contribution (Event)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Contribution_Product__c</fullName>
        <description>Pulls in the related product contribution</description>
        <formula>Product__r.Contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related product contribution</inlineHelpText>
        <label>Target Contribution (Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Technical_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technical lead for this event</description>
        <inlineHelpText>Enter the technical lead for this event</inlineHelpText>
        <label>Technical Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BSC Events</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related template event</description>
        <inlineHelpText>Lookup to the related template event</inlineHelpText>
        <label>Template Event</label>
        <referenceTo>Template_Event__c</referenceTo>
        <relationshipLabel>BSC Events</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Booking__c</fullName>
        <description>Total number of booking for this event (irrespective of status of booking)</description>
        <inlineHelpText>Total number of booking for this event (irrespective of status of booking)</inlineHelpText>
        <label>Total Booking</label>
        <summaryForeignKey>Special_Event_Booking__c.Special_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fixed_Costs__c</fullName>
        <description>Calculates the total fixed costs for the event</description>
        <formula>Trainer_Fees__c  +  Trainer_Accommodation_Costs__c  +  Courier_Costs__c  +  Venue_Flat_Rate__c +   Ad_Hoc_Fixed_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the total fixed costs for the event</inlineHelpText>
        <label>Total Fixed Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_Confirmed_Boking_Statuses__c</fullName>
        <description>Counts the number of bookings at the status &quot;Attended&quot;, &quot;No Show&quot;, &quot;Cancelled&quot;, &quot;Transferred&quot;. Used to make sure an event can&apos;t go to confirmed if any bookings have these values.</description>
        <inlineHelpText>Counts the number of bookings at the status &quot;Attended&quot;, &quot;No Show&quot;, &quot;Cancelled&quot;, &quot;Transferred&quot;. Used to make sure an event can&apos;t go to confirmed if any bookings have these values.</inlineHelpText>
        <label>Total Post Confirmed Boking Statuses</label>
        <summaryFilterItems>
            <field>Special_Event_Booking__c.Status__c</field>
            <operation>equals</operation>
            <value>Attended, No Show, Cancelled, Transferred, Attended - Fail, Attended - Pass, Attended - Merit</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Booking__c.Special_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Variable_Costs__c</fullName>
        <description>Calculates the total variable costs</description>
        <formula>(Course_Note_Costs__c  +  Ad_Hoc_Variable_Costs__c  +  Delegate_Pack_Costs__c  +  Venue_Delegate_Day_Rate__c)* No_of_Delegates_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the total variable costs</inlineHelpText>
        <label>Total Variable Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Venue_Costs_Reporting__c</fullName>
        <description>Calculates the total venue costs</description>
        <formula>Venue_Flat_Rate__c +
( Venue_Delegate_Day_Rate__c * No_of_Delegates_Booked__c * Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the total venue costs</inlineHelpText>
        <label>Total Venue Costs (Reporting)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trainer_Accommodation_Costs__c</fullName>
        <description>Roll up of Accommodation Costs</description>
        <inlineHelpText>Total from Trainer Accommodation Costs</inlineHelpText>
        <label>Trainer Accommodation Costs</label>
        <summarizedField>Special_Event_Trainer__c.Accommodation_Cost_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Event_Trainer__c.Type__c</field>
            <operation>equals</operation>
            <value>Active Trainer</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Trainer__c.BSC_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer_Accommodation_Day_Rate__c</fullName>
        <defaultValue>89</defaultValue>
        <description>Trainer Accommodation Day Rate</description>
        <inlineHelpText>Trainer Accommodation Day Rate</inlineHelpText>
        <label>Trainer Accommodation Day Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trainer_Accommodation_Days__c</fullName>
        <description>Number of days&apos; accommodation required by Trainer</description>
        <inlineHelpText>Number of days&apos; accommodation required by Trainer</inlineHelpText>
        <label>Trainer Accommodation Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer_Count__c</fullName>
        <description>Number of trainer allocated for this event, this is used in workflow for 14 day notification and audit report reminder</description>
        <label>Trainer Count</label>
        <summaryFilterItems>
            <field>Special_Event_Trainer__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Trainer__c.BSC_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer_Email__c</fullName>
        <label>Trainer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Trainer_Fees__c</fullName>
        <description>total trainer fees by calculating the sum of the trainer fee from the related active event trainer</description>
        <inlineHelpText>total trainer fees by calculating the sum of the trainer fee from the related active event trainer</inlineHelpText>
        <label>Trainer Fees</label>
        <summarizedField>Special_Event_Trainer__c.Trainer_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Event_Trainer__c.Type__c</field>
            <operation>equals</operation>
            <value>Active Trainer</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Trainer__c.BSC_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer_Instructions__c</fullName>
        <label>Trainer Instructions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <description>Name of the trainer to be used in Email Notifications.</description>
        <label>Trainer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Sustenance__c</fullName>
        <defaultValue>19.00</defaultValue>
        <description>Formula to add the allocated sustenance (meals etc) for the trainer expenses (£19)</description>
        <inlineHelpText>Formula to add the allocated sustenance (meals etc) for the trainer expenses (£19)</inlineHelpText>
        <label>Trainer Sustenance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Fees__c</fullName>
        <description>Total penalty fees by calculated the sum of all cancelled or transferred event booking&apos;s booking fee</description>
        <inlineHelpText>Total penalty fees by calculated the sum of all cancelled or transferred event booking&apos;s booking fee</inlineHelpText>
        <label>Transfer / Cancellation Fees</label>
        <summarizedField>Special_Event_Booking__c.Booking_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Event_Booking__c.Status__c</field>
            <operation>equals</operation>
            <value>Cancelled, Transferred</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Booking__c.Special_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Notes__c</fullName>
        <inlineHelpText>Notes entered in the transfer and cancellation reason VF Component.</inlineHelpText>
        <label>Transfer / Cancellation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Process_Date__c</fullName>
        <description>When the transfer / cancellation was processed by BSC</description>
        <inlineHelpText>When the transfer / cancellation was processed by BSC</inlineHelpText>
        <label>Transfer / Cancellation Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transfer_Cancellation_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reason why the cancellation or transfer is taking place</description>
        <inlineHelpText>The reason why the cancellation or transfer is taking place</inlineHelpText>
        <label>Transfer &amp; Cancellation Reason</label>
        <referenceTo>Transfer_Cancellation_Reasons__c</referenceTo>
        <relationshipLabel>BSC Events</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Status_Travel__c</fullName>
        <description>Has transfer been booked and by whom?</description>
        <inlineHelpText>Has transfer been booked and by whom?</inlineHelpText>
        <label>Transfer Status (Travel)</label>
        <picklist>
            <picklistValues>
                <fullName>Booked By BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked By Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked By Delivery Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Yet Booked</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transferred_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populates automatically with the originating Event when an In-Company Event / Audit is transferred</description>
        <inlineHelpText>Populates automatically with the originating Event when an In-Company Event / Audit is transferred</inlineHelpText>
        <label>Transferred From</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>Originating Events</relationshipLabel>
        <relationshipName>BSC_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_To_Event_End_Date__c</fullName>
        <description>Used for Transfer Form DDPs (Not on page layouts)</description>
        <formula>Transferred_To__r.EndDate__c</formula>
        <label>Transferred To Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferred_To_Event_Start_Date__c</fullName>
        <description>Used for Transfer Form DDPs (not on page layouts)</description>
        <formula>Transferred_To__r.StartDate__c</formula>
        <label>Transferred To Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferred_To_Event_Venue_City__c</fullName>
        <description>Used for Transfer Template DDPs (Not on Page Layouts)</description>
        <formula>Transferred_To__r.Venue_City__c</formula>
        <label>Transferred To Event Venue City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>At the moment Sales to Manually populate with the new event ref if an In-Company event is being transferred</description>
        <inlineHelpText>Populate when Transferring In-Company Events and Audits</inlineHelpText>
        <label>Transferred To</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>BSC Events</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Determines the type of event from a picklist</description>
        <inlineHelpText>Determine the type of event from the picklist</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Duration_Total__c</fullName>
        <description>Sum of all related event units duration</description>
        <inlineHelpText>Roll up of Unit duration (in days)</inlineHelpText>
        <label>Unit Duration Total</label>
        <summarizedField>Special_Event_Unit__c.Duration__c</summarizedField>
        <summaryForeignKey>Special_Event_Unit__c.Special_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Venue_Account_ID__c</fullName>
        <description>pulls in the venue account id for custom link report to show trainers on previous events</description>
        <formula>Venue__r.Id</formula>
        <inlineHelpText>pulls in the venue account id for custom link report to show trainers on previous events</inlineHelpText>
        <label>Venue Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <description>Pulls in the related venue account&apos;s principle address concatentated</description>
        <formula>IF(ISBLANK(Venue__r.Principle_Address_Building__c),&quot;&quot;,Venue__r.Principle_Address_Building__c &amp; BR()) +
IF(ISBLANK(Venue__r.Principle_Address_Street__c),&quot;&quot;,Venue__r.Principle_Address_Street__c &amp; BR()) +
IF(ISBLANK(Venue__r.Principle_Address_Area__c),&quot;&quot;,Venue__r.Principle_Address_Area__c &amp; BR()) +
IF(ISBLANK(Venue__r.Principle_Address_City__c),&quot;&quot;,Venue__r.Principle_Address_City__c &amp; BR()) +
IF(ISBLANK(Venue__r.Principle_Address_State_Province__c ),&quot;&quot;,Venue__r.Principle_Address_State_Province__c &amp; BR()) +
IF(ISBLANK(Venue__r.Principle_Address_ZIP_Postal_Code__c),&quot;&quot;, Venue__r.Principle_Address_ZIP_Postal_Code__c &amp; BR()) +
IF(ISPICKVAL(Venue__r.Principle_Address_Country__c, &quot;--none--&quot;),&quot;&quot;,TEXT(Venue__r.Principle_Address_Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related venue account&apos;s principle address concatentated</inlineHelpText>
        <label>Venue Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <description>Used within drawloop templates (not on page layouts)</description>
        <formula>Venue__r.Principle_Address_City__c</formula>
        <label>Venue City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Delegate_Day_Rate__c</fullName>
        <description>Add the cost of the venue per delegate per day</description>
        <inlineHelpText>Add the cost of the venue per delegate per day</inlineHelpText>
        <label>Venue Delegate Day Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Flat_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Add the cost of the venue if not taking into account the number of delegates</description>
        <inlineHelpText>Add the cost of the venue if not taking into account the number of delegates</inlineHelpText>
        <label>Venue Flat Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <description>Pulls in the related Venue&apos;s name if there is one</description>
        <formula>IF(ISBLANK( Venue__r.Name),&quot;&quot;,Venue__r.Name)</formula>
        <inlineHelpText>Pulls in the related Venue&apos;s name if there is one</inlineHelpText>
        <label>Venue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Region__c</fullName>
        <description>Automatically populated based on the Venue Region (thus driven by the Venue postcode)</description>
        <formula>Venue__r.Principle_Address_Region_UK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically populated based on the Venue Region (thus driven by the Venue postcode)</inlineHelpText>
        <label>Venue Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Ultimate_Parent__c</fullName>
        <description>Pulls in the related venue account&apos;s ultimate parent name</description>
        <formula>Venue__r.Ultimate_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related venue account&apos;s ultimate parent name</inlineHelpText>
        <label>Venue Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Venue in which the event is being held</description>
        <inlineHelpText>Select the event venue. For an In-company event held on company premises, select the account</inlineHelpText>
        <label>Venue</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <infoMessage>Search is limited to venues. Select &quot;Show all results&quot; to expand search to all organisations (for In-Company Events)</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events (Held in this Venue)</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visa_Order_Ref_Number__c</fullName>
        <description>Order reference for visa application</description>
        <inlineHelpText>Order reference for visa application</inlineHelpText>
        <label>Visa Order Ref Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>BSC Event</label>
    <listViews>
        <fullName>Add_HOc</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>No_of_Delegates_Booked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Public Training</value>
        </filters>
        <filters>
            <field>StartDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>No_of_Delegates_Booked__c</field>
            <operation>greaterThan</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>Add HOc</label>
    </listViews>
    <listViews>
        <fullName>Events_Allocating</fullName>
        <columns>Logistics_Team_Co_ordinator__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Venue__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>No_of_Delegates_Booked__c</columns>
        <columns>Provisional_Bookings__c</columns>
        <columns>Sales_Notes__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>International__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Allocating</value>
        </filters>
        <label>Events: Allocating</label>
        <sharedTo>
            <group>EventLogistics</group>
            <role>HeadofSales</role>
            <role>Sales_Manager_KAM</role>
            <role>Sales_Manager_RAM</role>
            <role>Sales_Team_International</role>
            <role>Sales_Team_KAM</role>
            <role>Sales_Team_RAM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Events_Requested</fullName>
        <columns>Logistics_Team_Co_ordinator__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Approved_for_Resourcing__c</columns>
        <columns>Venue__c</columns>
        <columns>StartDate__c</columns>
        <columns>International__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>EndDate__c</columns>
        <columns>Provisional_Bookings__c</columns>
        <columns>Sales_Notes__c</columns>
        <columns>Event_Notes__c</columns>
        <columns>Expiry_Date_Client_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Events: Requested</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>EventLogistics</group>
            <group>SalesManagers</group>
            <role>HeadofSales</role>
            <role>Sales_Manager_KAM</role>
            <role>Sales_Manager_RAM</role>
            <role>Sales_Team_International</role>
            <role>Sales_Team_KAM</role>
            <role>Sales_Team_RAM</role>
        </sharedTo>
    </listViews>
</CustomObject>